--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     </dependencies>
 
     <build>
-        <finalName>JenkinsDemo-application</finalName>
+        <finalName>jenkins-demo-application</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
